# FrameForge

./: .gitignore  README.md  TASK_4_SUMMARY.md  architecture.md  tasks.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/services/: base.py  factory.py  fal_editor.py  google_nano_banana.py  kontext_pro_editor.py  qwen_editor.py
frontend/: README.md  implementation.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js
frontend/src/lib/: Upload.svelte  api.js
server/: .env.example  .env.example.md  .gitignore  Cargo.toml
server/src/: config.rs  error.rs  lib.rs  main.rs
server/src/middleware/: mod.rs  rate_limit.rs
server/src/models/: mod.rs  request.rs  response.rs
server/src/routes/: edit.rs  health.rs  mod.rs  providers.rs
server/src/services/: base.rs  factory.rs  fal_editor.rs  google_nano_banana.rs  mod.rs
server/src/utils/: image_utils.rs  mod.rs
specs/: app___init__.md  app_config.md  app_main.md  app_services_base.md  app_services_factory.md  app_services_fal_editor.md  app_services_google_nano_banana.md
